--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -9,5 +9,9 @@
   },
   "devDependencies": {
     "nuxt": "3.0.0-rc.8"
+  },
+  "dependencies": {
+    "sass": "^1.54.8",
+    "vuetify": "^3.0.0-beta.9"
   }
 }
